--- a/INDEX.html
+++ b/INDEX.html
@@ -12,5 +12,6 @@
     <h1> HOLA COMO ESTAS</h1>
     <h1> HOLA COMO ESTAS</h1>
     <h1> ALEX TERRI</h1>
+    <h1> RENZO TERRIBLE</h1>
 </body>
 </html>
