--- a/INDEX.html
+++ b/INDEX.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <h1> HOLA COMO ESTAS</h1>
     <h1> HOLA COMO ESTAS</h1>
@@ -13,10 +15,12 @@
     <h1> HOLA COMO ESTAS</h1>
     <h1> ALEX TERRI</h1>
     <h1> RENZO TERRIBLE</h1>
-        <h1> YEXSONNNNN</h1>
+    <h1> YEXSONNNNN</h1>
     <h8>ola mundo soy vegreta del planeta de los ayayon<h8>
-        <div>
-            <h2>picoro crilin</h2>
-        </div>
+            <div>
+                <h2>picoro crilin</h2>
+            </div>
+            <h2>BULMA</h2>
 </body>
+
 </html>
