revisar nuevos cambios en el html y creado un estilo

--- a/INDEX.html
+++ b/INDEX.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="estilos/esti.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+</head>
 </head>
 
-<body>
+<body style="color: red;">
     <h1> HOLA COMO ESTAS</h1>
     <h1> HOLA COMO ESTAS</h1>
     <h1> HOLA COMO ESTAS</h1>
@@ -22,6 +26,15 @@
             </div>
             <h2>BULMA</h2>
             <h2>RENZO CREO SE MOLESTO NO</h2>
+            <div class="container">
+                <img class="img-fluid w-100" src="imagen/product-7.jpg" alt="">
+            </div>
+         
+
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+                crossorigin="anonymous"></script>
+
 </body>
 
 </html>
